--- a/CO² - Footprinting/Impressum.html
+++ b/CO² - Footprinting/Impressum.html
@@ -14,7 +14,7 @@
             <a class="navbar-brand" href="EcoHarmony.html">
                 <img src="Logo.png" alt="EcoHarmony Logo" width="75" height="50" class="d-inline-block align-top">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -40,18 +40,22 @@
         <h1>Impressum</h1>
     </div>
 
+<div class="container mt-3">
     <p>EcoHarmony</p>
     <p>Konstantin Lepschy</p>
     <p>Hainwg 16 </p>
     <p>87727 Babenhausen</p>
     <p>Matrikelnummer: 32007477</p>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 
+<div class="container mt-5">
     <div class="footer">
         <p>2024 Konstantin. Alle Rechte vorbehalten. | <a href="impressum.html">Impressum</a> | <a href="Datenschutzerklärung.html">Datenschutzerklärung</a></p>
     </div>
+</div>
 
 </body>
 
