--- a/CO² - Footprinting/Statistik.html
+++ b/CO² - Footprinting/Statistik.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>EcoHarmony</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -41,14 +41,16 @@
     </div>
 
 
+    <div class="container-mt5">
+        <h3 class="chart-heading">Prozentualer CO²-Emissionsanteil nach Länder</h3>
+            <div class="programming-stats">
+                <div class="chart-container">
+                    <canvas class="my-chart"></canvas>
+                </div>
+            
+    
 
-    <h3 class="chart-heading">Prozentualer CO²-Emissionsanteil nach Länder</h2>
-    <div class="programming-stats">
-        <div class="chart-container">
-            <canvas class="my-chart"></canvas>
-        </div>
-
-        <div class="details">
+    <div class="details">
             <ul></ul>
         </div>
     </div>
@@ -66,8 +68,11 @@
 
     <div class="container mt-5">
         <h1>Tabelle</h1>
+    </div>
 
+    <div class="container mt-3">
         <input type="text" id="searchInput" placeholder="Suche">
+    </div>
 
     <div class="Tabelle">
         <table>
@@ -118,13 +123,16 @@
           </table>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js"></script>
 
+<div class="container mt-5">
     <div class="footer">
         <p>2024 Konstantin. Alle Rechte vorbehalten. | <a href="impressum.html">Impressum</a> | <a href="Datenschutzerklärung.html">Datenschutzerklärung</a></p>
     </div>
-</body>
+</div>
 
+</body>
 </html>
 
