--- a/CO² - Footprinting/Unternehmen.html
+++ b/CO² - Footprinting/Unternehmen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>EcoHarmony</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <a class="navbar-brand" href="EcoHarmony.html">
                 <img src="Logo.png" alt="EcoHarmony Logo" width="75" height="50" class="d-inline-block align-top">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -40,9 +40,11 @@
         <h1>Unternehmen im Verlgeich</h1>
     </div>
     
+<div class="container mt-3">
     <input type="text" id="searchInput" placeholder="Suche nach einem Unternehmen">
+</div>
 
-<div>
+<div class="containter mt-3">
     <ul id="companyList">
         <li>1. China (Coal)</li>
         <li>2. Saudi Arabian Oil Company (Aramco)</li>
@@ -56,13 +58,16 @@
         <li>10. China National Petroleum Corp (CNPC)</li>
     </ul>
 </div>
-    
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+ 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="main.js"></script>
 
+<div class="container mt-5">
     <div class="footer">
         <p>2024 Konstantin. Alle Rechte vorbehalten. | <a href="impressum.html">Impressum</a> | <a href="Datenschutzerklärung.html">Datenschutzerklärung</a></p>
     </div>
+</div>
+
 </body>
 
 </html>
