--- a/CO² - Footprinting/Datenschutzerklärung.html
+++ b/CO² - Footprinting/Datenschutzerklärung.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="de" dir="auto">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,32 +9,33 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="EcoHarmony.html">
-                <img src="Logo.png" alt="EcoHarmony Logo" width="75" height="50" class="d-inline-block align-top">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Länder</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="Unternehmen.html">Unternehmen</a>
-                    </li>	
-                    <li class="nav-item">
-                        <a class="nav-link active" href="Statistik.html">Statistik</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="EcoHarmony.html">EcoHarmony</a>
-                    </li> 
-                </ul>
-            </div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="EcoHarmony.html">EcoHarmony</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Länder</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Unternehmen.html">Unternehmen</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Statistik.html">Tabelle</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
+
+      <div class="Logo">
+        <a href="EcoHarmony.html">
+        <img src="Logo.png" alt="CO2" width="30" height="60">
+        </a>
+    </div>
 
     <div class="container mt-5">
         <h1>Datenschutzerklärung</h1>
